# mudi

./: README.md  pyproject.toml
.github/workflows/: build.yaml  build.yml  build_pull_request.yml
mudi/: cli.py  collection.py  dispatcher.py  loaders.py  markdown.py  models.py  mudi_environment.py  mudi_settings.py  page.py  server.py  site.py  utils.py  watcher.py
mudi/models/: __init__.py  collection.py  feeds.py  markdown.py  sass.py  site.py
tests/: test_mudi.py
