[tool.poetry]
name = "mudi"
version = "0.1.0"
description = "An opinionated static site generator without bells and whistles."
authors = ["Dan Turkel <daturkel@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
python-frontmatter = "^0.5.0"
pydantic = "^1.5.1"
jinja2 = "^2.11.2"
libsass = "^0.20.0"
toml = "^0.10.1"
click = "^7.1.2"
markdown = "^3.2.2"
pygments = "^2.6.1"
markdown-checklist = "^0.4.3"
mdx_truly_sane_lists = "^1.2"
watchgod = "^0.6"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
mypy = "^0.782"
black = "^19.10b0"

[tool.poetry.scripts]
mudi = "mudi.cli:cli"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
